# cedocumentmapper_v2.0

./: .gitignore  AGENTS.md  README.md  app.py  providers.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: INDEX.md
docs/Instructions/: ALISON WORD 02.docx  ALISON WORD 03.docx  ALISON WORD 04.docx  ALISON WORD 05.docx  ALS 01.DOC  ALS 02.DOC  ALS 03.DOC  ALS 04.DOC  ALS 05.DOC  AMS 01.DOC  AMS 02.DOC  AMS 03.DOC  AMS 04.DOC  AMS 05.DOC  BC 01.DOC  BC 02.DOC  BC 03.DOC  BC 04.DOC  BC 05.DOC  FW 01.msg  FW 02.msg  FW 03.msg  FW 04.msg  FW 05.msg  KBS 01.docx  KERR 02.msg  KERR 04.msg  KERR 05.msg  LAW 01.DOC  LAW 02.DOC  LAW 03.DOC  LAW 04.DOC  LAW 05.DOC  MP Word 01.doc  MP Word 02.doc  MP Word 03.doc  MP Word 04.doc  MP Word 05.doc  OAK 01.DOC  OAK 02.DOC  (+29 more)
docs/architecture/: module-boundaries.md  overview.md
docs/contracts/: README.md  document-model.md  eva-json.schema.json  expected-fixture.schema.json  extraction-rule.schema.json  module-interfaces.md  provider-config.schema.json
docs/migration/: v1-to-v2.md
docs/operations/: packaging.md
docs/plans/: cliplan.md  comparisonreport.md  exceed-v1-extraction-plan.md  implementation-todos.md
docs/product/: requirements.md
docs/testing/: regression-strategy.md
docs/tickets/: EPIC-00-foundation.md  EPIC-01-domain-contracts.md  EPIC-02-reader-layer.md  EPIC-03-provider-detection.md  (+9 more)
frontend/: index.html  package-lock.json
tests/: README.md  test_cli.py  test_detection.py  test_exporters.py  test_migration.py  test_normalization.py  test_readers.py  test_regression.py  test_rules.py
(+306 files in other folders)
